2008-12-01  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* README: Add LibXML2 as an optional dependency.

	* TODO, doc/overview.edoc: Character data handling above 'root_depth'
	is fixed.

2008-11-28  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* m4/pkg.m4: Include pkg-config M4 macros because it's still needed
	when pkg-config isn't installed.

	* c_src/exmpp_xml_expat_legacy.c, c_src/exmpp_xml_libxml2.c,
	c_src/exmpp_xml_expat.c: ERL_DRV_FLAG_USE_PORT_LOCKING was always set,
	even when SMP support wasn't available in Erlang. This caused build
	failure with R11B-5 for instance. The extended driver structure
	doesn't exist in R11B-2 and earlier; fix this case.

2008-11-28  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	The following changes greatly improve memory consumption but they
	include some API changes:
	  o  #xmlattr doesn't carry a prefix anymore (the new record
	     is incompatible with the previous one).
	  o  Known lists handling and API is completly new (and incompatible).
	  o  exmpp_xml parser's options have changed:
	       . namespace has been removed.
	       . ns_check, names_check and attrs_check were renamed to
	         check_nss, check_elems and check_attrs.
	       . check_nss, check_elems and check_attrs now take the name
	         of a known list.
	       . endtag was renamed to emit_endtag.
	       . maxsize was renamed to max_size.

	* configure.ac: Add an option to enable/disable SMP support in port
	drivers that use it. Check for LibXML2 presence. Take care of the new
	include/internal/Makefile.

	* include/internal/extract-known-from-specs,
	include/internal/make-specs-list,
	include/internal/exmpp_known_nss.in,
	include/internal/exmpp_known_elems.in,
	include/internal/exmpp_known_attrs.in,
	include/internal/exmpp_known_nss.hrl.js,
	include/internal/exmpp_known_elems.hrl.js,
	include/internal/exmpp_known_attrs.hrl.js,
	include/internal/exmpp_known_nss.hrl.awk,
	include/internal/exmpp_known_elems.hrl.awk,